chris:cleaning up technical part

--- a/egbib.bib
+++ b/egbib.bib
@@ -344,3 +344,18 @@ doi={10.1109/ICCVW.2011.6130367},}
   author={Shewchuk, Jonathan Richard},
   year={1994}
 }
+
+@article{mcmc,
+year={2005},
+issn={0943-4062},
+journal={Computational Statistics},
+volume={20},
+number={2},
+doi={10.1007/BF02789703},
+title={Componentwise adaptation for high dimensional MCMC},
+url={http://dx.doi.org/10.1007/BF02789703},
+publisher={Springer-Verlag},
+author={Haario, Heikki and Saksman, Eero and Tamminen, Johanna},
+pages={265-273},
+language={English}
+}
