--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -192,97 +192,36 @@ the patches.
 % \end{comment}
 % All the code and CAD models is publicly available online \cite{Choy14} (currently not disclosed for anonymous review, visualizations are available in the supplementary material).
 
-\section{Our Approach \scream{better name?}}
+\section{Approach Overview}
 \label{sec:nz-who}
+\input{overview}
 
-\subsection{Overview}
-Our method attempts to match CAD models to 2D images, determining the best
-model within a class, its pose and scale, and the focal length of the camera
-used to produce the image. These parameters are first coarsely estimated using
-an ensemble of templates generated offline, before they are refined using
-MCMC by generating new detectors on the fly.
+\subsection{Rendering}
 
-% The basic detection method underlying our approach is WHO template matching.
-% However, we propose a new WHO variant called Non-Zero Whitened Histograms of
-% Orientations (NZ-WHO), where the variant of WHO templates are made from 
-% synthetic rendering to with 
-
-Our method In addition to the library of CAD models that will be matched to the query
-images, our method requires a feature statistics which can be collected once and for all.
-
-% images, our method requires a collection of random natural images. Offline, we
-% compute HOG features of these images and record their mean and spatial
-% autocovariance. The images are not used during testing, only the statistics
-% generated from them.
-
-Notably, we do not require any labelled training images of the objects to be
-detected. Our templates are generated exclusively by rendering CAD models from
-our library. From these renderings we produce novel HOG-like features we call
-Non-Zero Whitened Histograms of Orientations (NZ-WHO), which use the natural
-image statistics found offline to whiten a standard HOG template, making it
-more discriminative.
-
-The matching proceeds in two steps: First, we apply a bank of pre-trained
-detectors to the image, corresponding to a set of discrete viewpoints, scales,
-and object models. This provides a rough estimate of these parameters. Second,
-we refine these parameters using MCMC, where each candidate is evaluated by
-rendering a new whitened template on the fly. 
-
-Our ensemble of NZ-WHO templates can work as a detector but our algorithm 
-can be initialized using proposal bounding boxes from
-state-of-the-art object detectors \cite{Felzenszwalb10,Girshick14} before
-executing the two steps above. In this scenario, our approach provides a means
-to augment standard bounding box detectors with more interesting 3D
-information.
-\begin{comment}
-Our method is in line with \cite{Aubry14, Lim14} in the sense that we
-use only renderings, not real images. However, rather than using fixed
-sized mid-level patches, we use whole objects and make root
-templates. By using root templates, there is no need to learn a
-discriminative patch dictionary or to calibrate the patches and an
-additional inference stage is not required. However, whitening the
-whole template is prohibitive for several reasons. All templates have
-different aspect ratios making it difficult to generate the covariance
-matrix $\Sigma$. Since the root templates are larger than mid-level
-patches, a very large auto-covariance $\Gamma$ is required. Lastly,
-time complexity of decorrelating a template with $n$ cells increases
-as $O(n^3)$, resulting in slow template generation and large residuals
-due to numerical errors accumulated while decomposing the covariance
-matrix $\Sigma$. 
-
-To overcome these difficulties, we propose the Non-Zero Whitened
-Histograms of Orientations (NZ-WHO) with iterative Conjugate Gradient to
-generate templates in real time and enrich rectangular boxes with high
-quality 2D-3D matching. The 2D-3D matching provides a CAD model,
-sub-category, rendering, depth, viewpoint and focal length.
-
-Our method can work as a standalone 2D-3D matching algorithm, or even
-as a standalone ensemble of exemplar-based object detectors (Figure
-\ref{fig:front}) but its real power comes from combining generic
-object detectors and complement rectangular bounding boxes. Our method
-is simple in design; is several orders of magnitude faster than
-traditional method; requires only CAD models; does not need neither images nor
-calibration, yet is powerful in giving high-quality metadata. These
-properties make our method ideal for complementing object detections. 
-
-To complement detection bounding boxes, we first search possible 2D-3D
-matching by running cached discrete viewpoint templates. Then, for the
-most probable match, we refine the initial matching using Metropolis
-Hastings. Since it requires iterations of proposal and validation, we
-present real time analysis of NZ-WHO template generation to show that
-this can be done on-the-fly. The fine tuning stage process jointly
-optimizes translation, yaw, roll, pitch, scale, and focal length
-continuously and also searches for different CAD models.
-
-\end{comment}
-\subsection{Rendering Pipeline}
+We used a public rendering engine to create realistic rendering and
+depth\begin{comment}\cite{Choy14render}\end{comment}. The CAD models we used
+in our experiments contain color, texture and material information such as
+transparency and reflectance. We tried to make the rendering as much realistic
+as possible to simulate the natural image statistics. The example rendering is
+in Fig. \ref{fig:rendering}. We also extracted depth information as well while
+rendering to use in the reconstruction.
 
 We used a collection of CAD models to make exemplar renderings of CAD models and for viewpoints. The
 CAD models are cached so that when we fine-tune 2D-3D matching, so it can be rendered instantaneously.
 We made the renderings to change focal length and yaw, pitch, roll so that we can fine tune the matching
 continuously.
 
-\subsection{Non-Zero Whitened Histograms of Orientations (NZ-WHO)}
+\begin{figure}[t]
+  \begin{center}
+     \includegraphics[width=0.4\linewidth]{rendering}
+     \includegraphics[width=0.4\linewidth]{depth}
+  \end{center}
+  \caption{Example rendering and depth made by our renderer}
+  \label{fig:rendering}
+\end{figure}
+
+
+\subsection{Whitened Histograms of Orientations (WHO)}
 
 Recently, Hariharan \etal. introduced Whitened Histograms of Orientations (WHO)
 \cite{Hariharan12}, which uses statistics from natural images to whiten HOG
@@ -294,18 +233,9 @@ whitening the signal,
 \begin{equation}
 \tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X]) \label{eq:whitening}
 \end{equation}
-, we
-remove 2nd order correlation between all features. So, all elements in the
-random variable $\tilde{X} = \left[\tilde{X}_1, \tilde{X}_2, \dots,
-\tilde{X}_k\right]$, become more independent. In the context of HOG features, a
-whitened HOG template will produce Gaussian noise when convolved with a random
-natural image, but a delta-like response on an image matching the template. WHO
-templates are more discriminative than standard HOG templates because they only
-capture the gradients that differentiate the object from random images.
-
-Hariharan \etal. explained the
-whitening as Linear Discriminant Analysis (LDA) where all classes have different
-means but have the same covariance. 
+, we remove 2nd order correlation between all features. Since covarinace
+collection is expensive, \cite{Hariharan12} proposed easy way to generate
+covariance $\Sigma$ from autocovariance $\Gamma$
 
 % The whitening and LDA have the same
 % formulation when we make a decision boundary $w = \Sigma^{-1}(\mu_+ - \mu_0)$
@@ -314,97 +244,72 @@ means but have the same covariance.
 % (whitening) and $\Sigma$ is the covariance matrix of classes (LDA) or
 % the correlation within signal (whitening).
 
-We propose Non-Zero Whitened Histograms of Orientations (NZ-WHO), that are both
-more discriminative than WHO, and can be generated several orders of magnitude
-faster (in 70ms compared to several seconds for WHO). This speed up means we
-can generate templates on the fly, allowing our approach to evaluate arbitrary
-viewpoint hypotheses.
+% In \cite{Hariharan12}, the authors compute the mean and covariance matrix by assuming Wide-Sense Stationarity (WSS) of HOG features
+% generated from natural images. That is, they assume the mean of a HOG cell is
+% independent of its place in the image, and the autocovariance of cells depends
+% only on their relative location.
 
+% In one dimension, let $x(u)$ be the feature at location $u$. Then WSS states
+% that $\mathbb{E}\left[x(u)\right] = \mu$ for all $u$, and
+% \begin{equation}
+% \textrm{cov}_x(u,v) = \textrm{cov}_x(0, v-u) = \Gamma(v-u),
+% \end{equation} where $\Gamma$ is the autocovariance. For simplicity, we describe the 1D case but this can be easily extended to 2D spatial autocovariance.
+% 
+% Therefore, assuming WSS allows the covariance matrix of templates \emph{of any
+% size} to be synthesized from the autocovariance matrix using a simple lookup.
 
-In \cite{Hariharan12}, the authors compute the mean and covariance matrix by assuming Wide-Sense Stationarity (WSS) of HOG features
-generated from natural images. That is, they assume the mean of a HOG cell is
-independent of its place in the image, and the autocovariance of cells depends
-only on their relative location.
+% However, the 
+% We propose Non-Zero Whitened Histograms of Orientations (NZ-WHO), that are both
+% more discriminative than WHO, and can be generated several orders of magnitude
+% faster (in 70ms compared to several seconds for WHO). This speed up means we
+% can generate templates on the fly, allowing our approach to evaluate arbitrary
+% viewpoint hypotheses.
 
-In one dimension, let $x(u)$ be the feature at location $u$. Then WSS states
-that $\mathbb{E}\left[x(u)\right] = \mu$ for all $u$, and
-\begin{equation}
-\textrm{cov}_x(u,v) = \textrm{cov}_x(0, v-u) = \Gamma(v-u),
-\end{equation} where $\Gamma$ is the autocovariance. For simplicity, we describe the 1D case but this can be easily extended to 2D spatial autocovariance.
+% Our method requires generating a covariance matrix of non-zero cells 
 
-Therefore, assuming WSS allows the covariance matrix of templates \emph{of any
-size} to be synthesized from the autocovariance matrix using a simple lookup.
+\subsubsection{Whitening Synthesized Templates and Non-Zero WHO}
+Our first innovation is `Non-Zero' whitening. When synthesizing detection
+templates from rendered images, a common problem is how to handle the
+background. If the model is rendered over a natural image background, gradients
+in the background will be incorporated into the discriminative template,
+potentially causing false-positives if background elements exist in the query
+image.
 
-Our method requires generating a covariance matrix of non-zero cells 
+Alternatively, if the background is left textureless (see
+Fig.~\ref{fig:rendering}), whitening the resulting HOG template
+will produce undesirable background artifacts. These are created when centering
+the template (by subtracting the mean $\mu$), where strong negative weights are
+introduced in the textureless region (as seen in Fig.~\ref{fig:whocomparison}).
+This could result in positive matches being suppressed due to spurious
+background gradients.
 
-\subsubsection{Whitening Synthesized Templates}
-Our first innovation is `Non-Zero' whitening. When synthesizing detection templates from rendered images, a common problem is how to handle the background. If the model is rendered over a natural image background, gradients in the background will be incorporated into the discriminative template, potentially causing false-positives if background elements exist in the query image.
+NZ-WHO removes these artifacts so that the background has no effect on the
+template response. Given HOG features $x$, we create a new vector $x'$ which
+contains only the non-zero elements of $x$. We select the same elements of
+$\mu$ to produce $\mu'$, while the autocovariance lookup is only performed for
+the cells with non-zero gradient, producing $\Sigma'$ corresponding to the
+features in $x'$. After solving the resulting system (which is now smaller than
+in the WHO approach) we find
 
-Alternatively, if the background is left textureless \scream{did Hariharan do this?} (see Fig.~\ref{fig:rendering}), whitening the resulting HOG template will produce undesirable background artifacts. These are created when centering the template (by subtracting the mean $\mu$), where strong negative weights are introduced in the textureless region (as seen in Fig.~\ref{fig:whocomparison}). This could result in positive matches being suppressed due to spurious background gradients.
-
-\scream{might need to match notation with subsequent sections}
-NZ-WHO removes these artifacts so that the background has no effect on the template response. Given HOG features $x$, we create a new vector $x'$ which contains only the non-zero elements of $x$. We select the same elements of $\mu$ to produce $\mu'$, while the autocovariance lookup is only performed for the cells with non-zero gradient, producing $\Sigma'$ corresponding to the features in $x'$. After solving the resulting system (which is now smaller than in the WHO approach) we find
 \begin{equation}
 w'=\Sigma'^{-1}(x' - \mu') \label{eq:nz-who},
-\end{equation}which we reassemble into the final NZ-WHO template $w$ by replacing the non-zero elements of $x$ with the corresponding $w'$ element.
+\end{equation}which we reassemble into the final NZ-WHO template $w$ by
+replacing the non-zero elements of $x$ with the corresponding $w'$ element.
 
-Notice that $\Sigma$ is not square-rooted in Eq.~\ref{eq:nz-who}, whereas it is in the definition of whitening (Eq.~\ref{eq:whitening}). This is because the whitened template will only be used in the context of detection, which involves the inner product with the whitened HOG features of the query image $y$:
-\begin{equation}
-(y-\mu)^{T}\Sigma^{-\frac{1}{2}}\Sigma^{-\frac{1}{2}}(x-\mu)\\
-= (y-\mu)^{T} w.
-\end{equation}
-We can therefore capture the whitening of the query image features in $w$.
+% Notice that $\Sigma$ is not square-rooted in Eq.~\ref{eq:nz-who}, whereas it is
+% in the definition of whitening (Eq.~\ref{eq:whitening}). This is because the
+% whitened template will only be used in the context of detection, which involves
+% the inner product with the whitened HOG features of the query image $y$:
+% \begin{equation}
+% (y-\mu)^{T}\Sigma^{-\frac{1}{2}}\Sigma^{-\frac{1}{2}}(x-\mu)\\
+% = (y-\mu)^{T} w.
+% \end{equation}
+% We can therefore capture the whitening of the query image features in $w$.
 
 % We use the GPU to parallelize the lookup of the correct autocovariance cells during covariance matrix syntheses, which is \scream{x} times faster than using the CPU (Figure \ref{fig:covariancetime}).
 
-
 %\scream{chris:We propose Non-Zero Whitened Histograms of Orientations (NZ-WHO), an improvement over WHO which is both more discriminative than WHO and can be computed many orders of magnitude faster than WHO (70ms as opposed to to several seconds for WHO). This speedup allows us to generate NZ-WHO templates on the fly, allowing us to quickly evaluate arbitrary viewpoint hypotheses.}
-
-\subsubsection{Fast Whitening using Conjugate Gradient}
-
-The computational efficiency of our approach comes from using the iterative conjugate gradient method to whiten the HOG template. Whitening the non-zero feature vector $x'$ requires a system of linear equations $\Sigma' w' = (x' - \mu')$ to be solved. In
-\cite{Hariharan12}, the authors make use of the fact that covariance matrices
-are symmetric and positive semidefinite to solve the system via the Cholesky
-decomposition, which requires $O(n^3)$ time.
-
-The conjugate gradient method is an iterative algorithm for solving symmetric positive definite systems which runs in $O(n^2\kappa)$ time, where $\kappa$ is the condition number of the matrix.
-This makes conjugate gradient faster than decomposition for matrices with small condition
-numbers relative to their size.
-
-The covariance matrix for HOG templates is typically ill-conditioned, but we can add a regularization constant to the diagonal to reduce its condition number to the point where the conjugate gradient method will converge quickly. We use a constant of $0.15$, which reduces the condition number from $10^{20}$ to $50$, much smaller than the dimension of the matrix (7000).
-
-As a result, a GPU implementation of conjugate gradient converges in \scream{x
-ms}, two orders of magnitude faster than the system can be solved using the
-Cholesky factorization (\scream{5 s}).
-
-\subsubsection{Fast Convolution using the FFT}
-
-
-
-
-
-
-% We compare the performance of WHO and NZ-WHO on 3D Object dataset \cite{Savarese07} and report performance on Table \ref{tab:who_initializations}. 
-
-% To deal with the problems, we propose Non-Zero Whitened Histograms of Orientations.
-
-% To accommodate the growing usage of rendering image for 2D-3D matching using
-% WHO\cite{Aubry13, Aubry14, Lim14}, we analyzed various methods to whiten
-% synthetic rendering image and propose Non-Zero Whitened Histograms of
-% Orientations (NZ-WHO) which is a direct extension of \cite{Hariharan12}
-% designed for rendering images with textureless background. % Since a NZ-WHO
-% template has zero-mean and all elements in the template follow same
-% distribution, no explicit calibration is required if all the templates have
-% approximately the same number of cells. 
-
-% Since Combining NZ-WHO with Conjugate Gradient, 
-
-% \subsection{Non-Zero Whitened Histograms of Orientations (NZ-WHO)}
-% why non zero whitening and why it makes more sense than seeing 3D, IKEA
-% Overview of the subsections
-%   Generating covariance quickly
-%   Fast inversion
-%   Regularization
+\scream{add comments about the fig:whocomparison}
 
 \begin{figure}[t]
   \begin{center}
@@ -436,6 +341,73 @@ Cholesky factorization (\scream{5 s}).
   \label{fig:whocomparison}
 \end{figure}
 
+
+\subsubsection{Fast Whitening using Conjugate Gradient}
+
+The computational efficiency of our approach comes from using the iterative
+conjugate gradient method to whiten the HOG template. Whitening the non-zero
+feature vector $x'$ requires a system of linear equations $\Sigma' w' = (x' -
+\mu')$ to be solved. In
+\cite{Hariharan12}, the authors make use of the fact that covariance matrices
+are symmetric and positive semidefinite to solve the system via the Cholesky
+decomposition, which requires $O(n^3)$ time.
+
+The conjugate gradient method is an iterative algorithm for solving symmetric
+positive definite systems which runs in $O(n^2\kappa)$ time, where $\kappa$ is
+the condition number of the matrix.
+This makes conjugate gradient faster than decomposition for matrices with small condition
+numbers relative to their size.
+
+The covariance matrix for HOG templates is typically ill-conditioned\cite{Hariharan12}, but we
+can add a regularization constant to the diagonal to reduce its condition
+number to the point where the conjugate gradient method will converge quickly.
+We use a constant of $0.15$, which reduces the condition number from $10^{20}$
+to $50$, much smaller than the dimension of the matrix (7000).
+
+As a result, a GPU implementation of conjugate gradient converges in 50
+ms when using 250 HOG cells, two orders of magnitude faster than the system can be solved using the
+Cholesky factorization.
+
+\begin{figure}[t]
+  \begin{center}
+  \begin{tabular}{cc}
+     \includegraphics[width=0.5\linewidth]{whotime} & 
+     \includegraphics[width=0.5\linewidth]{speedup}\\
+     (a) & (b) \\
+ \end{tabular}
+  \end{center}
+  \caption{(a) Comparison of WHO variants generation time and HOG extraction time (b) final speed of using NZ-WHO compare to WHO}
+  \label{fig:whotime}
+\end{figure}
+
+We compare the speed of each of template generation methods in
+Fig.~\cite{fig:covariancetime_crop} Using naive Cholesky decomposition,
+WHO template takes several seconds. But, if we use iterative Conjugate Gradient method, it only
+takes 100ms. If we use NZ-WHO, we can gain extra speed up since we only whitens non-zero cells.
+
+\subsubsection{Fast Convolution using the FFT}
+
+% We compare the performance of WHO and NZ-WHO on 3D Object dataset \cite{Savarese07} and report performance on Table \ref{tab:who_initializations}. 
+
+% To deal with the problems, we propose Non-Zero Whitened Histograms of Orientations.
+
+% To accommodate the growing usage of rendering image for 2D-3D matching using
+% WHO\cite{Aubry13, Aubry14, Lim14}, we analyzed various methods to whiten
+% synthetic rendering image and propose Non-Zero Whitened Histograms of
+% Orientations (NZ-WHO) which is a direct extension of \cite{Hariharan12}
+% designed for rendering images with textureless background. % Since a NZ-WHO
+% template has zero-mean and all elements in the template follow same
+% distribution, no explicit calibration is required if all the templates have
+% approximately the same number of cells. 
+
+% Since Combining NZ-WHO with Conjugate Gradient, 
+
+% \subsection{Non-Zero Whitened Histograms of Orientations (NZ-WHO)}
+% why non zero whitening and why it makes more sense than seeing 3D, IKEA
+% Overview of the subsections
+%   Generating covariance quickly
+%   Fast inversion
+%   Regularization
 % Overview of the subsections
 % In this section, we will give a brief overview of whole whitening stages. In the first section \ref{feature_statistics}, we will discuss about first and second order statistics of HOG feature. Then, we will discuss about using autocovariance $\Gamma$ to create covariance matrix $\Sigma$ for non-zero cells and SIMD implementation to speed up the generation. Then, we will explain fast and accurate way to solve $w = \Sigma^{-1}x$ using Conjugate Gradient method. % Finally, we will analyze the effect of regularization.
 
@@ -534,13 +506,13 @@ during covariance matrix syntheses. The real time analysis for various number of
 % resolution and run $\Sigma$ generation on CPU and GPU 100 times and report the
 % average time in Fig. \ref{fig:covariancetime}.
 
-\begin{figure}[t]
-  \begin{center}
-     \includegraphics[width=0.9\linewidth]{covariancetime} 
-  \end{center}
-  \caption{Time to generate $\Sigma$ for various number of cells (left) and same plot on log scale(right). The time complexity increases as $O(n^2)$ for $n$ number of cells.}
-  \label{fig:covariancetime_crop}
-\end{figure}
+% \begin{figure}[t]
+%   \begin{center}
+%      \includegraphics[width=0.9\linewidth]{covariancetime} 
+%   \end{center}
+%   \caption{Time to generate $\Sigma$ for various number of cells (left) and same plot on log scale(right). The time complexity increases as $O(n^2)$ for $n$ number of cells.}
+%   \label{fig:covariancetime_crop}
+% \end{figure}
  
 % 1-dimensional version of SIMD implementation that generate covariance matrix $\Sigma$ from autocovariance $\Gamma$ on GPU is on the supplementary material.
 % \begin{comment}i
@@ -607,17 +579,6 @@ naive CPU implementation.
 %the conjugate gradients stage doesn't go upto the size of the matrix to
 %converge.
 
-\begin{figure}[t]
-  \begin{center}
-  \begin{tabular}{cc}
-     \includegraphics[width=0.5\linewidth]{whotime} & 
-     \includegraphics[width=0.5\linewidth]{speedup}\\
-     (a) & (b) \\
- \end{tabular}
-  \end{center}
-  \caption{Comparison of HOG variants generation time and final }
-  \label{fig:whotime}
-\end{figure}
 [Figure spectral analysis]
 
 \begin{figure}[t]
