started pass over mcmc

--- a/intro.tex
+++ b/intro.tex
@@ -38,8 +38,8 @@ recognition, where viewpoint estimates are provided by
 detectors in addition to 2D bounding boxes. Several attempts have been
 made to estimate viewpoint along with object class detections,
 implemented as extensions to existing detectors, such as the implicit
-shape models~\cite{}, the constellation model~\cite{}, or the
-deformable part model~\cite{Xiang12,Pepik12,Fidler12,Hejrati14}.
+shape models~\cite{sun10eccv}, the constellation model~\cite{stark10bmvc}, or the
+deformable part model~\cite{gu10eccv,Xiang12,Pepik12,Fidler12,Hejrati14}.
 
 Recently, an even higher level of geometric detail was reached in the
 form of aligning
